--- a/e-account.html
+++ b/e-account.html
@@ -105,7 +105,7 @@
             <div class="box2">
                 <img src="/logo-white.png" alt="">
                 
-                <p>Our purpose is To make the plaesure and benifits <br>of sports Acceesible to Money.</p>
+                <p>Our purpose is To make the plaesure and benifits <br>of Best Digital Watch Acceesible to Money.</p>
                 
             </div>
             <div class="box3">
